--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "redux": "^4.2.0",
+    "swiper": "^8.4.5",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
